# Dessert_Gemini

./: .gitignore  LICENSE  README.md  cli.py  cli_gui.py  cli_gui_gemini.py  html_templates.py  login_dialog.py  main.py  prompts.toml  pyproject.toml  query.md  style.qss  test2.csv
