[project]
name = "dessert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "pandas>=2.3.2",
    "pyinstaller>=6.15.0",
    "pyside6>=6.9.2",
    "supabase>=2.18.1",
    "supabase-auth>=2.12.3",
]
